@@ -96,6 +96,9 @@ SOLR_JAVA_MEM="-Xms512m -Xmx4096m"
 #SOLR_OPTS="$SOLR_OPTS -Dsolr.clustering.enabled=true"
 SOLR_OPTS="$SOLR_OPTS -Djava.util.concurrent.ForkJoinPool.common.parallelism=100"
 
+# Bug: https://issues.apache.org/jira/browse/SOLR-13606
+SOLR_OPTS="$SOLR_OPTS -Djava.locale.providers=JRE,SPI"
+
 # Location where the bin/solr script will save PID files for running instances
 # If not set, the script will create PID files in $SOLR_TIP/bin
 #SOLR_PID_DIR=
